change the JS script attribute in index.html

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </table>
 
     </div>
-    <script src="./dist/validator.js" defer async></script>
-    <script src="./dist/main.js" defer async></script>
+    <script src="./dist/validator.js" defer></script>
+    <script src="./dist/main.js" defer></script>
 </body>
 
 </html>
